--- a/root/code/templates/addsection.html
+++ b/root/code/templates/addsection.html
@@ -9,21 +9,42 @@
 <body>
   {% include 'header-lib.html' %}
   <div class="mainbody-nonlogin">
+    <!-- <form>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1">
+  </div>
+
+
+  <div class="mb-3 form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form> -->
     <form action="" method="POST">
-    <label for="sectionName">Section Name<span style="color: red;">*</span>:</label>
-    <input type="text" id="sectionName" name="sectionName" required maxlength="50">
-    
-    <label for="sectionImage">Section Image<span style="color: red;">*</span>:</label>
-    <input type="url" id="sectionImage" name="sectionImage" placeholder="url link for section image">
-    
-    <label for="sectionDescription">Section Description<span style="color: red;">*</span>:</label>
-    <textarea id="sectionDescription" name="sectionDescription" required></textarea>
-    
-    <input type="submit" value="Add Section">
+        <div class="mb-3">
+        <label for="sectionName" class="form-label">Section Name<span style="color: red;">*</span>:</label>
+        <input class="form-control" type="text" id="sectionName" name="sectionName" required maxlength="50">
+        </div>
+        <div class="mb-3">
+        <label class="form-label" for="sectionImage" class="form-label">Section Image<span style="color: red;">*</span>:</label>
+        <input class="form-control" type="url" id="sectionImage" name="sectionImage" placeholder="url link for section image">
+        </div>
+        <div class="mb-3">
+        <label for="sectionDescription" class="form-label">Section Description<span style="color: red;">*</span>:</label>
+        <input class="form-control" type="text" id="sectionDescription" name="sectionDescription" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Add Section</button>
+    </form>
     <br>
     <a href="{{url_for('librarian_dashboard')}}">Back to Dashboard</a>
-</form>
-    </div>
+  </div>
 {% include 'footer.html' %}
 </body>
 </html>
